Improved README even more.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "license": "CC0-1.0",
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
-    "only": "_f(){ node --test src/**/$1.js; }; _f",
+    "only": "_f(){ node --test src/**/$1.js; echo '\n'; }; _f",
     "easy": "node --test src/easy/**.js",
     "medium": "node --test src/medium/**.js",
     "hard": "node --test src/hard/**.js",
