Added Stack implementation.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,10 +4,20 @@
     "lib": ["ESNext"],
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
+    "esModuleInterop": false,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      "$/*": ["./test/*"],
+    },
+
     "allowJs": true,
     "checkJs": true,
     "alwaysStrict": true,
+
+    "strict": true,
     "strictNullChecks": true,
+    "noUncheckedIndexedAccess": true
   },
   "include": ["./src/**/*.js", "./test/**/*.js"],
   "exclude": ["node_modules", "**/node_modules/*", "dist", "**/dist/*"]
