Reorganized directory struct.

--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
   },
   "scripts": {
     "only": "_f() { node --test src/**/$1.js; echo '\n'; }; _f",
-    "struct": "_f() { node --test test/$1.js; echo '\n'; }; _f",
     "easy": "node --test src/easy/**.js",
     "medium": "node --test src/medium/**.js",
     "hard": "node --test src/hard/**.js",
-    "test": "node --test test/",
-    "echo": "cat ./package.json"
+    "all": "node --test src/**/**.js"
   },
   "devDependencies": {
     "@types/node": "^20.9.0"
