--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.5.1",
-    "@types/node": "^20.9.0"
+    "@types/node": "^20.9.0",
+    "prettier": "^3.1.0"
   }
 }
