--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.5.1",
-    "@types/node": "^20.9.0",
+    "@types/eslint": "^8.44.7",
+    "@types/eslint__js": "^8.42.3",
+    "@types/node": "^20.9.1",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "globals": "^13.23.0",
     "prettier": "^3.1.0"
   }
 }
