Updated pre-commit hook.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "prepare": "git config --local core.hooksPath .githooks",
-    "format": "prettier --config prettier.config.js --cache --ignore-unknown --write src/",
-    "lint": "eslint --config eslint.config.js --cache --quiet --fix src/",
+    "format": "prettier --config prettier.config.js --cache --ignore-unknown --write",
+    "lint": "eslint --config eslint.config.js --cache --quiet --fix",
     "only": "_f() { node --test src/**/$1.js; }; _f",
     "all": "node --test src/**/**.js"
   },
