--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=20.0.0"
   },
   "scripts": {
-    "prepare": "git config --local core.hooksPath .githooks",
+    "postinstall": "git config --local core.hooksPath .hooks",
     "format": "prettier --config prettier.config.js --cache --ignore-unknown --write",
     "lint": "eslint --config eslint.config.js --cache --quiet --fix",
     "only": "_f() { node --test src/**/$1.js; }; _f",
@@ -20,7 +20,7 @@
     "@types/eslint": "^8.44.7",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^8.42.3",
-    "@types/node": "^20.9.1",
+    "@types/node": "^20.9.2",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "globals": "^13.23.0",
