--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "postinstall": "git config --local core.hooksPath .hooks",
     "format": "prettier --config prettier.config.js --cache --ignore-unknown --write",
     "lint": "eslint --config eslint.config.js --cache --quiet --fix",
-    "only": "_f() { node --test src/**/$1.js; }; _f",
-    "all": "node --test src/**/**.js"
+    "only": "_f() { node --test src/core/$1.js; }; _f",
+    "all": "node --test src/core/*.js"
   },
   "devDependencies": {
     "@eslint/js": "^8.54.0",
