--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "engines": {
     "node": ">=20.0.0"
   },
+  "packageManager": "pnpm@8.10.5+sha256.a4bd9bb7b48214bbfcd95f264bd75bb70d100e5d4b58808f5cd6ab40c6ac21c5",
   "scripts": {
     "postinstall": "git config --local core.hooksPath .hooks",
     "format": "prettier --config prettier.config.js --cache --ignore-unknown --write",
@@ -20,7 +21,7 @@
     "@types/eslint": "^8.44.7",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^8.42.3",
-    "@types/node": "^20.9.2",
+    "@types/node": "^20.10.0",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "globals": "^13.23.0",
